--- a/EFGameOfLife/MainWindow.xaml
+++ b/EFGameOfLife/MainWindow.xaml
@@ -5,8 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EFGameOfLife"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Game of Life" Height="450" Width="800">
     <Grid>
-        
+        <TextBox x:Name="SaveName" Height="23" Margin="296,240,376,0" Text="SaveName" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="X" Height="23" Margin="313,283,438,0" Text="X" VerticalAlignment="Top"/>
+        <TextBox x:Name="Y" Height="23" Margin="374,283,377,0" Text="Y" VerticalAlignment="Top"/>
+
+        <Canvas x:Name="World" HorizontalAlignment="Left" Height="358" Margin="457,27,0,0" VerticalAlignment="Top" Width="311">
+            <Rectangle Fill="LightBlue" Canvas.Left="25" Canvas.Top="25" Width="25" Height="25" />
+            <Rectangle Fill="DarkOrange" Canvas.Left="50" Canvas.Top="25" Width="25" Height="25" />
+            <Rectangle Fill="DarkRed" Canvas.Left="25" Canvas.Top="50" Width="25" Height="25" />
+            <Rectangle Fill="LightBlue" Canvas.Left="50" Canvas.Top="50" Width="25" Height="25" />
+        </Canvas>
+        <ListBox HorizontalAlignment="Left" Height="331" Margin="10,38,0,0" VerticalAlignment="Top" Width="100"/>
+
     </Grid>
 </Window>
