--- a/EFGameOfLife/MainWindow.xaml
+++ b/EFGameOfLife/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EFGameOfLife"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Game of Life" Height="450" Width="800">
     <Grid>
         
     </Grid>
