--- a/EFGameOfLife/MainWindow.xaml
+++ b/EFGameOfLife/MainWindow.xaml
@@ -7,6 +7,23 @@
         mc:Ignorable="d"
         Title="Game of Life" Height="450" Width="800">
     <Grid>
-        
+        <StackPanel Orientation="Horizontal">
+            <StackPanel Orientation="Vertical">
+                <TextBlock Text="Width" />
+                <TextBox Name="WorldWidth" Text="9" />
+                <TextBlock Text="Heigth" />
+                <TextBox Name="WorldHeight" Text="9" />
+                <Button Name="GameNew" Content="New game" Click="GameNew_Click"/>
+                <Button Name="GameLoad" Content="Load game"/>
+                <Button Name="GamePlay" Content="Play/Pause game"/>
+                <Button Name="GameRecord" Content="Record game" Click="GameRecord_Click"/>
+            </StackPanel>
+
+            <Viewbox Grid.Column="0" Grid.Row="0" Stretch="UniformToFill">
+                <Canvas Name="WorldGridCanvas" Width="100" Height="100" Background="Transparent" MouseDown="WorldGridCanvas_MouseDown" MouseUp="WorldGridCanvas_MouseUp" MouseMove="WorldGridCanvas_MouseMove" />
+            </Viewbox>
+            
+        </StackPanel>
+
     </Grid>
 </Window>
