--- a/EFGameOfLife/MainWindow.xaml
+++ b/EFGameOfLife/MainWindow.xaml
@@ -16,13 +16,16 @@
                 <Button Name="GameNew" Content="New game" Click="GameNew_Click"/>
                 <Button Name="GameLoad" Content="Load game"/>
                 <Button Name="GamePlay" Content="Play/Pause game"/>
-                <Button Name="GameRecord" Content="Record game" Click="GameRecord_Click"/>
+                <Button Name="GameRecord" Click="GameRecord_Click">
+                <Button x:Name="GameRecord_Copy" Content="Record game" Click="GameRecord_Click"/>
+                </Button>
+                <Button Content="Get Grid" Width="74" Click="GetGridButton_Click"/>
             </StackPanel>
 
             <Viewbox Grid.Column="0" Grid.Row="0" Stretch="UniformToFill">
                 <Canvas Name="WorldGridCanvas" Width="100" Height="100" Background="Transparent" MouseDown="WorldGridCanvas_MouseDown" MouseUp="WorldGridCanvas_MouseUp" MouseMove="WorldGridCanvas_MouseMove" />
             </Viewbox>
-            
+
         </StackPanel>
 
     </Grid>
