--- a/EFGameOfLife/MainWindow.xaml
+++ b/EFGameOfLife/MainWindow.xaml
@@ -15,7 +15,7 @@
                 <TextBox Name="WorldHeight" Text="4" />
                 <Button Name="GameNew" Content="New game" Click="GameNew_Click"/>
                 <Button Name="GameLoad" Content="Load game"/>
-                <Button Name="GamePlay" Content="Play/Pause game"/>
+                <Button Name="GamePlay" Content="Play/Pause game" Click="GamePlay_Click"/>
                 <Button Name="GameRecord" Content="Record game" Click="GameRecord_Click"/>
             </StackPanel>
 
