--- a/EFGameOfLife/MainWindow.xaml
+++ b/EFGameOfLife/MainWindow.xaml
@@ -20,22 +20,23 @@
                 <Button x:Name="GameRecord_Copy" Content="Record game" Click="GameRecord_Click"/>
                 </Button>
                 <Button Content="Get Grid" Width="74" Click="GetGridButton_Click"/>
-                <Slider Name="GameSpeed" Minimum="10" Maximum="2000"  />
-                <ListBox Height="100" Name="SavedGames">
-                    <StackPanel Orientation="Horizontal">
-                        <Image Width="32" Height="32" />
-                        <StackPanel>
-                            <TextBlock Text="Save 1"/>
-                            <TextBlock Text="320x320"/>
-                        </StackPanel>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <Image Width="32" Height="32" />
-                        <StackPanel>
-                            <TextBlock Text="Save 2"/>
-                            <TextBlock Text="320x320"/>
-                        </StackPanel>
-                    </StackPanel>
+                <Slider Name="GameSpeed" Minimum="10" Maximum="2000" ValueChanged="GameSpeed_ValueChanged"  />
+                <ListBox Name="ListBoxSavedGames" SelectionChanged="ListBoxSavedGames_SelectionChanged">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <!--<Image Width="32" Height="32" />-->
+                                <StackPanel>
+                                    <TextBlock Text="{Binding Name}"/>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="{Binding Width}"/>
+                                        <TextBlock Text="x"/>
+                                        <TextBlock Text="{Binding Height}"/>
+                                    </StackPanel>
+                                </StackPanel>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
                 </ListBox>
 
             </StackPanel>
