Databas är i princip klart. GUI och delete kvar.

--- a/EFGameOfLife/MainWindow.xaml
+++ b/EFGameOfLife/MainWindow.xaml
@@ -41,6 +41,7 @@
                                     <TextBlock Text="{Binding Name}"/>
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="{Binding Width}"/>
+                                        <TextBlock Text="x"/>
                                         <TextBlock Text="{Binding Height}"/>
                                     </StackPanel>
                                 </StackPanel>
@@ -50,13 +51,26 @@
                 </ListBox>
                 <TextBox x:Name="textBox_saveDataName" Height="23" TextWrapping="Wrap" Text="Save Data Name" Width="120"/>
                 <Button x:Name="RecordGame" Content="Record Game" Width="75" Click="GameRecord_Click"/>
+                <Button x:Name="button_playRecord" Content="Play Record" Width="75" Click="Button_playRecord_Click_1"/>
+                <StackPanel Orientation="Horizontal" Name="Stats">
+                    <TextBlock Text="Alive: " />
+                    <TextBlock Text="{Binding Alive}" />
+                    <TextBlock Text=" Gen: " />
+                    <TextBlock Text="{Binding Generation}" />
+                    <TextBlock Text=" Update: " />
+                    <TextBlock Text="{Binding Updates}" />
+                </StackPanel>
             </StackPanel>
 
             <Viewbox Grid.Column="0" Grid.Row="0" Stretch="UniformToFill">
                 <Canvas Name="WorldGridCanvas" Width="100" Height="100" Background="Transparent" MouseDown="WorldGridCanvas_MouseDown" MouseUp="WorldGridCanvas_MouseUp" MouseMove="WorldGridCanvas_MouseMove" />
             </Viewbox>
 
+            
+
         </StackPanel>
 
+        
+        
     </Grid>
 </Window>
