More refactorings and async

--- a/EFGameOfLife/MainWindow.xaml
+++ b/EFGameOfLife/MainWindow.xaml
@@ -62,7 +62,7 @@
                 </StackPanel>
             </StackPanel>
 
-            <local:GridControl x:Name="GridControl1" Width="100" Height="100" />
+            <local:GridControl x:Name="GridControl1" />
         </StackPanel>
 
     </Grid>
