--- a/EFGameOfLife/MainWindow.xaml
+++ b/EFGameOfLife/MainWindow.xaml
@@ -28,30 +28,30 @@
                 <CheckBox Name="WorldInfinite" Content="Infinite world"/>
                 <Button Name="GameNew" Content="New game" Click="GameNew_Click"/>
                 <Button Name="GamePlay" Content="Play/Pause game" Click="GamePlay_Click"/>
-                <Button Name="GameRecord" Click="GameRecord_Click">
-                </Button>
                 <Slider Name="GameSpeed" Minimum="20" Maximum="1500" ValueChanged="GameSpeed_ValueChanged" TickFrequency="10"  />
                 <ListBox Name="ListBoxSavedGames" SelectionChanged="ListBoxSavedGames_SelectionChanged">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <!--<Image Width="32" Height="32" />-->
+                                <Image Width="32" Height="32" />
                                 <StackPanel>
                                     <TextBlock Text="{Binding Name}"/>
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="{Binding Width}"/>
                                         <TextBlock Text="x"/>
                                         <TextBlock Text="{Binding Height}"/>
+                                        <TextBlock Text="    "/>
+                                        <TextBlock Text="{Binding Generation}" HorizontalAlignment="Right" />
                                     </StackPanel>
                                 </StackPanel>
                             </StackPanel>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
-                <TextBox x:Name="textBox_saveDataName" Height="23" TextWrapping="Wrap" Text="Save Data Name" Width="120"/>
-                <Button x:Name="button_RemoveGame" Content="Remove Game" Width="83" Click="Button_RemoveGame_Click"/>
-                <Button x:Name="RecordGame" Content="Record Game" Width="75" Click="GameRecord_Click"/>
-                <Button x:Name="button_playRecord" Content="Play Record" Width="75" Click="Button_playRecord_Click_1"/>
+                <TextBox Name="textBox_saveDataName" TextWrapping="Wrap" Text="Save Data Name"/>
+                <Button Name="button_RemoveGame" Content="Remove Game" Click="Button_RemoveGame_Click"/>
+                <Button Name="GameRecord" Content="Record Game" Click="GameRecord_Click"/>
+                <Button Name="button_playRecord" Content="Play Record" Click="Button_playRecord_Click_1"/>
                 <StackPanel Orientation="Horizontal" Name="Stats">
                     <TextBlock Text="Alive: " />
                     <TextBlock Text="{Binding Alive}" />
