Allt ska fungera enl spec nu samt några grafiska ändringar ang recording/play å sånt. Fixat med namn & att man kan spela trots att man inte har någon data i databasen. Kvar att göra är ju bara grafiska grejjer och ev någon optimering. /Rb

--- a/EFGameOfLife/MainWindow.xaml
+++ b/EFGameOfLife/MainWindow.xaml
@@ -48,10 +48,9 @@
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
-                <TextBox Name="textBox_saveDataName" TextWrapping="Wrap" Text="Save Data Name"/>
+                <TextBox Name="textBox_saveDataName" TextWrapping="Wrap"/>
                 <Button Name="button_RemoveGame" Content="Remove Game" Click="Button_RemoveGame_Click"/>
                 <Button Name="GameRecord" Content="Record Game" Click="GameRecord_Click"/>
-                <Button Name="button_playRecord" Content="Play Record" Click="Button_playRecord_Click_1"/>
                 <StackPanel Orientation="Horizontal" Name="Stats">
                     <TextBlock Text="Alive: " />
                     <TextBlock Text="{Binding Alive}" />
