--- a/EFGameOfLife/MainWindow.xaml
+++ b/EFGameOfLife/MainWindow.xaml
@@ -50,7 +50,7 @@
                 </ListBox>
                 <TextBox Name="textBox_saveDataName" TextWrapping="Wrap"/>
                 <Button Name="button_RemoveGame" Content="Remove Game" Click="Button_RemoveGame_Click"/>
-                <Button Name="GameRecord" Content="Record Game" Click="GameRecord_Click"/>
+                <Button Name="GameRecord" Content="Record new game" Click="GameRecord_Click"/>
                 <StackPanel Orientation="Horizontal" Name="Stats">
                     <TextBlock Text="Alive: " />
                     <TextBlock Text="{Binding Alive}" />
